# valut

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  publish.sh
.github/workflows/: release.yml
.sqlx/: query-6b878c703b6f9ca528166194df85312ff30d32b5e1ad2d2f3ee09150cfb63617.json  query-a027c48bc74f9f08a69873f4ee1027d6153d77d62d7859d29eb53a7f3fadcf43.json  query-fd03b8219bdc2cdd64df3b07c81994d02d83bd9cdafa4e5815f460d00090b51b.json
src/: exchange_rate.rs  main.rs  val_curs.rs
