[package]
name = "valut"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version="1.47.1", features = ["full"]}
serde = {version="1.0.219",features=["derive"]}
reqwest = {version="0.12.22", features=["rustls-tls"]}
anyhow = "1.0.98"
quick-xml = {version="0.38.0", features=["serde", "serialize"]}
chrono = "0.4.41"
rust_decimal = "1.37.2"
